# config/routes.rb
@@ -5,9 +5,11 @@ Rails.application.routes.draw do
 
   namespace :api do
     namespace :v1 do
-      post "auth/register", to: "auth#register"
-      post "auth/login",    to: "auth#login"
-      get  "auth/me",       to: "auth#me"
+      post   "auth/register", to: "auth#register"
+      post   "auth/login",    to: "auth#login"
+      get    "auth/me",       to: "auth#me"
+      post   "auth/refresh",  to: "auth#refresh"
+      delete "auth/logout",   to: "auth#logout"
 
       resources :events, only: [ :index, :show, :create, :update, :destroy ] do
         resources :media, only: [ :index, :create, :destroy ]
